fixed crosshair z-index/removed redundant css in finished

--- a/src/Components/Map/Map.scss
+++ b/src/Components/Map/Map.scss
@@ -72,7 +72,7 @@
   width: 40px;
   background-color: white;
   border-radius: 50%;
-  z-index: 999;
+  z-index: 998;
   right: 10px;
   top: 10px;
 }
