--- a/src/containers/FinishedPage/FinishedPage.scss
+++ b/src/containers/FinishedPage/FinishedPage.scss
@@ -16,12 +16,6 @@
 
     text-align: center;
   }
-
-  // @media screen and (min-width: 375px) {
-  //   &__logo {
-  //     // margin-top: 100px;
-  //   }
-  // }
 }
 
 .about {
@@ -77,15 +71,12 @@ $bg-color2: #1e9c4b;
 $border-color: #1e9c4b;
 $border-width: 2px;
 
-$sqrt3: 1.7321; // Square-root of 3
+$sqrt3: 1.7321;
 $hex-height: 70px;
-$hex-min-width: 170px; //$hex-height * $sqrt3 / 2;
-$hex-distance: (
-  $hex-height / (2 * $sqrt3)
-); // d = h / (2*tan(60°)); with h = the height of the button
+$hex-min-width: 170px;
+$hex-distance: ($hex-height / (2 * $sqrt3));
 
 $hover-color: $border-color;
-//$hover-color: #D3AC14;
 
 $hover-text: $border-color;
 $hover-text: $bg-color;
@@ -100,7 +91,6 @@ $hover-text: $bg-color;
   height: $hex-height;
   margin: auto;
   margin-top: 10%;
-  //padding: 0.5rem #{$hex-distance * 1.5};
   text-align: center;
   font-size: 20px;
   line-height: 70px;
@@ -108,7 +98,6 @@ $hover-text: $bg-color;
   color: $border-color;
   cursor: pointer;
   border: none;
-  //background-color: black;
   clip-path: polygon(
     #{$hex-distance} 0,
     calc(100% - #{$hex-distance}) 0,
@@ -150,94 +139,3 @@ $hover-text: $bg-color;
     }
   }
 }
-
-// .startButton {
-
-//   $bg-color: black; // font colour after hover
-//   $bg-color2: #1e9c4b; //nothing so far
-//   $border-color: #1e9c4b; // font color before hover
-//   $border-width: 2px;
-//   $sqrt3: 1.7321; // Square-root of 3
-//   $hex-height: 70px; //5rem;;
-//   // $hex-min-width: 170px; //$hex-height * $sqrt3 / 2;
-//   $hex-distance: (
-//     $hex-height / (2 * $sqrt3)
-//   ); // d = h / (2*tan(60°)); with h = the height of the button
-//   $hover-color: $border-color;
-//   //$hover-color: #D3AC14;
-//   $hover-text: $border-color;
-//   $hover-text: $bg-color;
-//   *,
-//   *::before,
-//   *::after {
-//     margin: 0;
-//     padding: 0;
-//     box-sizing: border-box;
-//     transition: 0.25s all 0.02s ease-in-out;
-//   }
-
-//   letter-spacing: 2px;
-//   font-weight: bold;
-//   // min-width: 150px;
-//   // min-height: $button-height;
-//   // text-align: center;
-//   // font-size: $button-font-size;
-//   // border-radius: $button-radius;
-//   // line-height: $button-height;
-//   // box-shadow: $button-shadow;
-//   // border: none;
-//   // display: inline-block;
-//   appearance: none;
-//   position: relative;
-//   display: inline-block;
-//   // min-width: $hex-min-width;
-//   height: $hex-height;
-//   margin: auto;
-//   //padding: 0.5rem #{$hex-distance * 1.5};
-//   text-align: center;
-//   font-size: 20px;
-//   line-height: 70px;
-//   vertical-align: middle;
-//   //color: $border-color;
-//   cursor: pointer;
-//   border: none;
-//   //background-color: black; //rgba(0, 0, 0, 0.25);
-//   clip-path: polygon(
-//     #{$hex-distance} 0,
-//     calc(100% - #{$hex-distance}) 0,
-//     100% 50%,
-//     calc(100% - #{$hex-distance}) 100%,
-//     #{$hex-distance} 100%,
-//     0 50%
-//   );
-//   &::before {
-//     content: "";
-//     position: absolute;
-//     left: 0;
-//     top: 0;
-//     width: 100%;
-//     height: 100%;
-//     //background-color: black; //border
-//     clip-path: polygon(
-//       0 50%,
-//       #{$border-width} 50%,
-//       calc(#{$hex-distance} + #{$border-width/2}) #{$border-width},
-//       calc(100% - #{$hex-distance} - #{$border-width/2}) #{$border-width},
-//       calc(100% - #{$border-width}) 50%,
-//       calc(100% - #{$hex-distance} - #{$border-width/2})
-//         calc(100% - #{$border-width}),
-//       calc(#{$hex-distance} + #{$border-width/2}) calc(100% - #{$border-width}),
-//       #{$border-width} 50%,
-//       0 50%,
-//       0 100%,
-//       100% 100%,
-//       100% 50%,
-//       100% 0,
-//       0 0
-//     );
-//   }
-//   //&:hover {
-//   color: $bg-color;
-//   background-color: $border-color;
-//   //}
-// }
